fix spacing issues with location preview

--- a/res/less/components/def.less
+++ b/res/less/components/def.less
@@ -38,8 +38,13 @@
     margin-right: 1rem;
     margin-top: 1rem;
     color: @color-text-default;
+    max-width: 12.5em;
 
     dt {
         width: auto;
     }
+
+    .on-small-devices({
+        display: none;
+    });
 }
